--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,13 +11,21 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
       - name: Get kubectl
         uses: azure/setup-kubectl@v1
+
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
+
       - name: Terraform Init
         id: init
-        run: terraform init
+        run: |
+          terraform init \
+            -backend-config="access_key=${{ secrets.SPACES_KEY }}" \
+            -backend-config="secret_key=${{ secrets.SPACES_SECRET_KEY }}" \
+            -backend-config="bucket=${{ secrets.SPACES_BUCKET_NAME }}"
+
       - name: Terraform deploy
         id: deploy
         run: terraform apply -auto-approve
